# gazebo

./: .gitignore  README.md  TODO.txt  TrajectoryPlanner.py  flight_model_1.py  object_recognition.py  physics_model.py  start.sh  start_exploration.sh  start_navigation.sh  start_robot.sh  test.py
entertainer_pcl/: CMakeLists.txt  package.xml
entertrainer_navigation/: CMakeLists.txt  entertrainer_exploration.launch  package.xml
entertrainer_test/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
entertrainer_test/launch/: entertrainer_house.launch  entertrainer_robot.launch  entertrainer_test.launch
entertrainer_test/nodes/: TrajectoryPlanner.py  ball_launcher.py  frontier_node.py  physics_model.py  rotation.py  sensor_rotate.py  test  test_backup  test_ball  test_planner  test_rviz  trajectory_planner.py  transform_data
entertrainer_test/rviz/: entertrainer_rviz.rviz
entertrainer_test/urdf/: dog.urdf  tennis_ball.urdf  vase.urdf
entertrainer_test/urdf/dae/: Entertrainertrybodycombined.dae  body.dae  casterweel.dae  thirdweel.dae  wheels.dae
entertrainer_test/urdf/entertrainer_house/entertrainer_house/: model.config  model.sdf
entertrainer_test/urdf/robot/: .entertrainer.urdf.xacro.swp  entertrainer.gazebo.xacro  entertrainer.urdf.xacro  model.config  model.sdf  turtlebot3_waffle.urdf.xacro
entertrainer_test/urdf/stl/: Entertrainertrybodycombined.stl  casterweel.stl  lava_vase.stl  lava_vase1.stl  thirdweel.stl  weels.stl
entertrainer_test/urdf/unit_box/: model.sdf
entertrainer_traj_planner/: CMakeLists.txt  package.xml
map_files/: map.pgm  (+1 more)
(+13 files in other folders)
